# Message_QA_API_Service

./: main.py  pyproject.toml  requirements.txt
messages/: messages_0.json  messages_100.json  messages_1000.json  messages_1100.json  messages_1200.json  messages_1300.json  messages_1400.json  messages_1500.json  messages_1600.json  messages_1700.json  messages_1800.json  messages_1900.json  messages_200.json  messages_2000.json  messages_2100.json  messages_2200.json  messages_2300.json  messages_2400.json  messages_2500.json  messages_2600.json  messages_2700.json  messages_2800.json  messages_2900.json  messages_300.json  messages_3000.json  messages_3100.json  messages_3200.json  messages_3300.json  messages_400.json  messages_500.json  messages_600.json  messages_700.json  messages_800.json  messages_900.json
rag/: ingest.py  local_test.py  query.py  serve.py
vectore_store/9251a799-b404-4bdb-a449-83a873ffc5ad/: index_metadata.pickle
